--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,8 @@ docker-build:
         tag=":$CI_COMMIT_REF_SLUG"
         echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
       fi
-    - docker build --pull -t "$DOCKER_REGISTRY_IMAGE${tag}" .
-    - docker push "$DOCKER_REGISTRY_IMAGE${tag}"
+    - docker build --pull -t "$CI_PROJECT_NAME${tag}" .
+    - docker push "$CI_PROJECT_NAME${tag}"
   # Run this job in a branch where a Dockerfile exists
   when: manual
   tags:
