--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ docker-build:
   image: docker:latest
   stage: build
   variables:
-    DOCKER_HOST: tcp://127.0.0.1:2375
+    DOCKER_HOST: "tcp://docker:2375"
   services:
     - docker:dind
   before_script:
