--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,14 +5,12 @@ docker-build:
   stage: build
 
   variables:
-    DOCKER_HOST: "tcp://docker:2375"
+    DOCKER_HOST: "tcp://svc-0:2375"
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
 
   services:
-    - name: docker:dind
-      variables:
-        HEALTHCHECK_TCP_PORT: 2375/tcp
+    - docker:dind
 
   before_script:
     - docker info && docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
