--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,11 @@ docker-build:
   
   stage: build
 
-  variables:
-    DOCKER_HOST: "tcp://svc-0:2375"
-    DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
-
   services:
     - docker:dind
 
   before_script:
-    - docker info && docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
+    - docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
   # Default branch leaves tag empty (= latest tag)
   # All other branches are tagged with the escaped branch name (commit ref slug)
   script:
