--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ docker-build:
   stage: build
 
   variables:
-    DOCKER_HOST: tcp://0.0.0.0:2375
+    DOCKER_HOST: tcp://localhost:2375
     DOCKER_TLS_CERTDIR: ''
 
   services:
