--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,24 @@
+image: docker:27.5
+services:
+  - docker:27.5-dind
+
 docker-build:
-  # Use the official docker image.
-  image: docker:27.5
-  
   stage: build
-
-  variables:
-    DOCKER_HOST: tcp://localhost:2375
-    DOCKER_TLS_CERTDIR: ""
-
-  services:
-    - docker:27.5-dind
-
   before_script:
     - docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
   # Default branch leaves tag empty (= latest tag)
   # All other branches are tagged with the escaped branch name (commit ref slug)
   script:
-    - |
-      if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
-        tag=""
-        echo "Running on default branch '$CI_DEFAULT_BRANCH': tag = 'latest'"
-      else
-        tag=":$CI_COMMIT_REF_SLUG"
-        echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
-      fi
-    - docker build --pull -t "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}" .
-    - docker push "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}"
-  # Run this job in a branch where a Dockerfile exists
+    - docker info
+  #     if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
+  #       tag=""
+  #       echo "Running on default branch '$CI_DEFAULT_BRANCH': tag = 'latest'"
+  #     else
+  #       tag=":$CI_COMMIT_REF_SLUG"
+  #       echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
+  #     fi
+  #   - docker build --pull -t "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}" .
+  #   - docker push "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}"
+  # # Run this job in a branch where a Dockerfile exists
   tags:
     - docker
