--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,11 @@
 image: docker:27.5
+
 services:
   - docker:27.5-dind
+
+variables: 
+  DOCKER_HOST: tcp://docker:2375 
+  DOCKER_TLS_CERTDIR: ""
 
 docker-build:
   stage: build
