--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,32 @@
 default:
-  image: docker:24.0.5
+  image: docker:lates
   services:
-    - docker:24.0.5-dind
+    - docker:dind
   before_script:
-    - docker info
+    - docker info && docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
 
 variables:
   DOCKER_HOST: tcp://docker:2376
   DOCKER_TLS_CERTDIR: "/certs"
   DOCKER_TLS_VERIFY: 1
   DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
-  
+
 docker-build:
   stage: build
-  # before_script:
-  #   - docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" $DOCKER_REGISTRY
-  # # Default branch leaves tag empty (= latest tag)
+  # Default branch leaves tag empty (= latest tag)
   # All other branches are tagged with the escaped branch name (commit ref slug)
   script:
-    - docker info
-  #     if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
-  #       tag=""
-  #       echo "Running on default branch '$CI_DEFAULT_BRANCH': tag = 'latest'"
-  #     else
-  #       tag=":$CI_COMMIT_REF_SLUG"
-  #       echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
-  #     fi
-  #   - docker build --pull -t "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}" .
-  #   - docker push "$DOCKER_REGISTRY_NAME/$CI_PROJECT_NAME${tag}"
-  # # Run this job in a branch where a Dockerfile exists
+    - |
+      if [[ "$CI_COMMIT_BRANCH" == "$CI_DEFAULT_BRANCH" ]]; then
+        tag=""
+        echo "Running on default branch '$CI_DEFAULT_BRANCH': tag = 'latest'"
+      else
+        tag=":$CI_COMMIT_REF_SLUG"
+        echo "Running on branch '$CI_COMMIT_BRANCH': tag = $tag"
+      fi
+    - docker build --pull -t "$CI_PROJECT_NAME${tag}" .
+    - docker push "$CI_PROJECT_NAME${tag}"
+  # Run this job in a branch where a Dockerfile exists
+  when: manual
   tags:
     - docker
